--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -21,3 +21,5 @@ Author URI: https://dylanbradramsey.com
 @use 'forms';
 @use 'review-cards';
 @use 'previous-litters';
+@use 'photo-gallery';
+@use 'site-banner';
