--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -536,6 +536,90 @@ figure {
   margin-bottom: 30px;
 }
 
+.service-cards-group {
+  display: grid;
+  grid-gap: 30px;
+  grid-template-columns: 1fr;
+  justify-content: center;
+  justify-items: center;
+  margin: auto;
+  max-width: 1240px;
+  width: 100%;
+}
+
+@media (min-width: 1024px) {
+  .service-cards-group--two-col {
+    grid-template-columns: 1fr 1fr;
+    gap: 80px;
+  }
+}
+.service-cards-group--two-col a:first-child {
+  justify-self: self-end;
+}
+.service-cards-group--two-col a:last-child {
+  justify-self: self-start;
+}
+
+@media (min-width: 1024px) {
+  .service-cards-group--three-col {
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 0;
+  }
+}
+
+@media (min-width: 1024px) {
+  .service-cards-group--five-col {
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-gap: 10px;
+  }
+}
+
+.single-service-card {
+  border-radius: 50px;
+  border: 5px solid black;
+  box-shadow: var(--shadow);
+  color: var(--site-main-color-brown);
+  display: block;
+  max-width: 300px;
+  text-decoration: none;
+  transition: transform 250ms;
+  width: 100%;
+}
+.single-service-card a {
+  color: var(--site-main-color-brown);
+}
+.single-service-card:visited {
+  color: var(--site-main-color-brown);
+}
+.single-service-card:hover {
+  transform: translateY(-10px);
+}
+
+.single-service-card {
+  align-items: center;
+  border-radius: 4px;
+  border: 4px solid black;
+  display: flex;
+  flex-flow: column;
+  justify-content: center;
+  position: relative;
+  width: 100%;
+}
+
+.single-service-card__image {
+  display: block;
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  max-height: 200px;
+}
+
+.single-service-card__heading {
+  font-size: 18px;
+  padding: 20px 0;
+  text-align: center;
+}
+
 .testimonial-banner {
   background: #C69C6C;
 }
@@ -849,6 +933,156 @@ figure {
   margin: auto;
   max-width: 100%;
   width: 750px;
+}
+
+.photo-gallery {
+  justify-content: center;
+}
+@media (min-width: 1024px) {
+  .photo-gallery {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fill, 580px);
+  }
+}
+
+.photo-gallery__group {
+  display: flex;
+  flex-flow: column;
+  margin: 0 auto;
+  max-width: 100%;
+  position: relative;
+  width: 470px;
+}
+@media (min-width: 768px) {
+  .photo-gallery__group {
+    margin: auto;
+  }
+}
+@media (min-width: 1024px) {
+  .photo-gallery__group {
+    display: unset;
+    flex-flow: unset;
+    height: 230px;
+    margin: 100px auto;
+  }
+}
+
+@media (min-width: 1024px) {
+  .photo-gallery__group img {
+    border-radius: var(--round-md);
+    height: 220px;
+    margin-bottom: unset;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+    object-fit: cover;
+    position: absolute;
+    transition-delay: 200ms;
+    transition: margin 0.2s ease-in-out;
+    width: 250px;
+  }
+}
+
+.photo-gallery__photo {
+  border-radius: var(--round-md);
+  height: 220px;
+  margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+  object-fit: cover;
+  width: 250px;
+}
+@media (min-width: 1024px) {
+  .photo-gallery__photo {
+    margin-bottom: unset;
+    position: absolute;
+    transition: margin 0.2s ease-in-out;
+    transition-delay: 200ms;
+  }
+  .photo-gallery__photo:hover {
+    margin-bottom: 100px;
+  }
+}
+.photo-gallery__photo img {
+  margin-bottom: 25px;
+}
+
+@media (min-width: 1024px) {
+  .photo-gallery__photo--1 {
+    rotate: -18deg;
+    transition: margin 0.2s ease-in-out;
+    z-index: 1;
+  }
+  .photo-gallery__photo--1:hover {
+    margin-top: -50px;
+    transition-delay: 500ms;
+  }
+  .photo-gallery__photo--2 {
+    bottom: 37px;
+    left: 38px;
+    rotate: -14deg;
+    z-index: 2;
+  }
+  .photo-gallery__photo--3 {
+    bottom: 46px;
+    left: 93px;
+    rotate: -7deg;
+    z-index: 3;
+  }
+  .photo-gallery__photo--4 {
+    bottom: 46px;
+    left: 134px;
+    rotate: 0deg;
+    z-index: 4;
+  }
+  .photo-gallery__photo--5 {
+    bottom: 20px;
+    left: 181px;
+    rotate: 10deg;
+    z-index: 5;
+  }
+  .photo-gallery__photo--6 {
+    bottom: -7px;
+    left: 234px;
+    rotate: 18deg;
+    z-index: 6;
+  }
+}
+.heading__photo-gallery {
+  margin-bottom: 30px;
+  text-align: center;
+  width: 100%;
+}
+@media (min-width: 1024px) {
+  .heading__photo-gallery {
+    position: absolute;
+    top: -130px;
+  }
+}
+
+.site-banner {
+  background: var(--site-secondary-color-brown);
+  grid-column: 1/-1;
+  margin-bottom: 20px;
+  position: relative;
+}
+.site-banner img {
+  filter: contrast(63%) grayscale(9%);
+  height: 450px;
+  margin: auto;
+  min-width: 100%;
+  object-fit: cover;
+}
+.site-banner .site-banner__emblem {
+  filter: contrast(100%);
+  height: 100%;
+  object-fit: contain;
+  padding: 14px;
+  position: absolute;
+  width: 100%;
+  z-index: 1;
 }
 
 /*
