--- a/style.css
+++ b/style.css
@@ -1,13 +1,3 @@
-/*
-Theme Name: Stone Creek
-Text Domain: Stone Creek
-Version: 1.0
-Description: Custom theme for dog breader website
-Tags: dogs
-Author: Dylan Ramsey
-Author URI: https://dylanbradramsey.com
-*/
-
 *, *::before, *::after {
   box-sizing: border-box;
 }
@@ -42,23 +32,30 @@ p, h1, h2, h3, h4, h5, h6 {
   isolation: isolate;
 }
 
-/*
-Example of mobile first setup
-.someClass {
-
-  @media (min-width: $tablet) {}
-  @media (min-width: $desktop) {}
-  @media (min-width: $widescreen) {}
-}
-*/
 html, body {
   max-width: 100%;
   overflow-x: hidden;
 }
 
 body {
+  background-color: green;
+}
+
+body {
   background: #F4F2E9;
   font-family: "Ubuntu", sans-serif;
+}
+
+input[type=text] {
+  border: solid black 2px;
+  border-radius: 4px;
+}
+
+select {
+  font: inherit;
+  border: solid black 2px;
+  border-radius: 4px;
+  background: none;
 }
 
 h1, .h1 {
@@ -102,6 +99,10 @@ h5 {
     font-size: 1.5rem;
   }
 }
+a {
+  text-decoration: none;
+}
+
 p {
   font-size: 1rem;
   margin-bottom: 1.5625rem;
@@ -120,6 +121,14 @@ img {
   -ms-user-select: none;
 }
 
+figure {
+  margin: 0;
+}
+
+.site-primary-color {
+  color: #C69C6C;
+}
+
 @media (min-width: 1024px) {
   .mobile-only {
     display: none;
@@ -136,7 +145,7 @@ img {
 .container {
   margin: 0 auto;
   max-width: 100%;
-  width: 280px;
+  width: 281px;
 }
 @media (min-width: 768px) {
   .container {
@@ -174,11 +183,6 @@ img {
   padding: 0 25px;
   margin: 0 auto 20px;
 }
-
-.button a {
-  text-decoration: none;
-}
-
 @media (min-width: 1024px) {
   .button {
     margin: 4px 10px 4px 0;
@@ -205,6 +209,14 @@ img {
   box-shadow: 3px 3px 6px 0px #3b3b3b;
 }
 
+.inner-page {
+  margin-top: 50px;
+}
+
+.center-text {
+  text-align: center;
+}
+
 .mobile-navigation {
   padding-bottom: 30px;
 }
@@ -220,6 +232,10 @@ img {
   padding: 4px 0;
   display: none;
   margin-bottom: 30px;
+}
+.mobile-navigation .mobile-navigation__routes a {
+  color: black;
+  text-decoration: none;
 }
 .mobile-navigation .mobile-navigation__routes li {
   padding: 20px 0 15px 20px;
@@ -253,6 +269,10 @@ img {
     width: 100%;
     font-size: 1.5rem;
     padding-left: 55px;
+  }
+  .desktop-navigation .desktop-navigation__routes a {
+    color: black;
+    text-decoration: none;
   }
   .desktop-navigation .desktop-navigation__routes li {
     transition: margin 0.2s ease-in-out;
@@ -447,6 +467,37 @@ img {
     display: block;
   }
 }
+.queen {
+  display: grid;
+  grid-template-columns: 1fr;
+  margin-bottom: 50px;
+}
+@media (min-width: 1024px) {
+  .queen {
+    grid-template-columns: 1fr 2fr;
+  }
+}
+@media (min-width: 1024px) {
+  .queen .queen-content {
+    margin-left: 35px;
+  }
+}
+.queen .queen-content__body {
+  color: black;
+}
+.queen .queen-image img {
+  border-radius: 10px;
+  width: 100%;
+  max-height: 350px;
+  margin-bottom: 25px;
+}
+@media (min-width: 1024px) {
+  .queen .queen-image img {
+    margin-bottom: 0;
+    min-width: 300px;
+  }
+}
+
 .queens {
   color: #C69C6C;
   padding: 30px 0;
@@ -510,7 +561,7 @@ img {
   flex-flow: column;
   align-items: center;
   max-width: 100%;
-  width: 280px;
+  width: 281px;
 }
 @media (min-width: 768px) {
   .testimonial-banner .testimonial-banner__container {
@@ -608,6 +659,10 @@ img {
   padding: 0;
   align-self: flex-start;
 }
+.footer .footer__navigation a {
+  text-decoration: none;
+  color: black;
+}
 @media (min-width: 768px) {
   .footer .footer__navigation {
     align-self: center;
@@ -621,6 +676,11 @@ img {
 }
 .footer .footer__badge-container {
   display: flex;
+}
+@media (min-width: 1024px) {
+  .footer .footer__badge-container {
+    margin-left: 120px;
+  }
 }
 .footer .footer__badge {
   padding: 20px;
@@ -648,30 +708,6 @@ img {
   color: black;
 }
 
-/*# sourceMappingURL=/main.77bb5cfd.css.map */
-
-/* Bellow CSS was created manually outside of SASS project. Should add this back into the static SASS project sometime */
-
-a {
-  text-decoration: none;
-}
-
-.inner-page {
-  margin-top: 50px;
-}
-
-input[type=text] {
-  border: solid black 2px;
-  border-radius: 4px;
-}
-
-select {
-  font: inherit;
-  border: solid black 2px;
-  border-radius: 4px;
-  background: none;
-}
-
 .wpcf7 .screen-reader-response {
   display: none;
 }
@@ -679,6 +715,14 @@ select {
 .site-form-field-half {
   width: 210px;
   max-width: 100%;
+  background: none;
+  margin-bottom: 13px;
+}
+
+.site-form-field-whole {
+  margin-bottom: 13px;
+  background: none;
+  width: 100%;
 }
 
 .contact-us__form {
@@ -690,7 +734,6 @@ select {
   margin: auto;
   max-width: 100%;
 }
-
 @media (min-width: 1024px) {
   .form-wrapper {
     margin: auto;
@@ -704,31 +747,16 @@ select {
   justify-content: space-between;
   width: 100%;
 }
-
-
 .half-form-field-group input {
   width: 240px;
   width: 100%;
   max-width: 100%;
 }
-
 @media (min-width: 1024px) {
   .half-form-field-group input {
     width: 240px;
     max-width: 100%;
   }
-}
-
-
-.site-form-field-half {
-  background: none;
-  margin-bottom: 13px;
-}
-
-.site-form-field-whole {
-  margin-bottom: 13px;
-  background: none;
-  width: 100%;
 }
 
 .home-form-field-submit {
@@ -745,6 +773,11 @@ select {
   box-shadow: 3px 3px 6px 0px #717171;
   color: black;
 }
+@media (min-width: 1024px) {
+  .home-form-field-submit {
+    margin: 4px 10px 4px 0;
+  }
+}
 
 .form-submit-button {
   text-align: center;
@@ -754,88 +787,48 @@ select {
   display: none;
 }
 
-@media (min-width: 1024px) {
-  .home-form-field-submit {
-    margin: 4px 10px 4px 0;
-  }
-}
-
-.desktop-navigation__routes a {
-  color: black;
-  text-decoration: none;
-}
-
-.mobile-navigation__routes a {
-  color: black;
-  text-decoration: none;
-}
-
-.footer__navigation a {
-  text-decoration: none;
-  color: black;
-}
-
-
-
-@media (min-width: 1024px) {
-  .footer .footer__badge-container {
-    display: flex;
-    margin-left: 120px;
-  }
-}
-
-.center-text {
-  text-align: center;
-}
-
-/* Review page */
-
 .review-cards {
   display: grid;
   overflow: hidden;
-  grid-template-columns: repeat(1, 1fr);
+  grid-template-columns: 1fr;
   justify-content: center;
 }
-
 @media (min-width: 1024px) {
   .review-cards {
-    grid-template-columns: repeat(2, 1fr);
+    grid-template-columns: 1fr 1fr;
     justify-content: center;
+    row-gap: 32px;
   }
 }
 
 .review-card {
   width: 270px;
   border: solid;
+  border-width: 2px;
   margin-top: 25px;
   padding: 10px 20px;
-  box-shadow: 3px 3px 6px 0px #3b3b3b;
+  box-shadow: 1px 1px 1px 0px #272727;
   display: flex;
   flex-flow: column;
   justify-content: space-between;
   margin: 10px auto;
+  border-radius: 7px;
+  min-height: 425px;
+  border-color: #333333;
 }
-
 @media (min-width: 768px) {
   .review-card {
     width: 450px;
     border: solid;
     padding: 20px 30px;
-    box-shadow: 3px 3px 6px 0px #3b3b3b;
-    
   }
 }
-
-.review-card__image img {
+.review-card .review-card__image img {
   margin: 0 auto;
-  width: 140px;
-  height: 140px;
+  width: 250px;
+  height: 250px;
   border-radius: 50%;
   object-fit: cover;
-}
-
-.site-primary-color {
-  color: #C69C6C;
 }
 
 .review-platforms {
@@ -843,45 +836,10 @@ select {
   justify-content: center;
   padding-bottom: 40px;
 }
-
-.review-platform {
+.review-platforms .review-platform {
   width: 150px;
   max-width: 100%;
   margin: 20px;
-}
-
-.queen {
-  display: flex;
-  flex-flow: column;
-  margin-bottom: 50px;
-}
-
-@media (min-width: 1024px) {
-  .queen {
-    flex-flow: row;
-  }
-}
-
-.queen-content__body {
-  color: black;
-}
-
-.queen-content {
-  margin-left: 35px;
-}
-
-.queen-image img {
-  border-radius: 10px;
-
-  max-width: 100%;
-  margin-bottom: 25px;
-}
-
-@media (min-width: 1024px) {
-  .queen-image img {
-    margin-bottom: 0;
-    min-width: 300px;
-  }
 }
 
 .previous-litter-gallery {
@@ -891,10 +849,147 @@ select {
 .previous-litters-group {
   margin-top: 40px;
 }
-
 .previous-litters-group img {
   margin: auto;
   max-width: 100%;
   width: 750px;
 }
 
+.photo-gallery {
+  justify-content: center;
+}
+@media (min-width: 1024px) {
+  .photo-gallery {
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fill, 580px);
+  }
+}
+
+.photo-gallery__group {
+  display: flex;
+  flex-flow: column;
+  margin: 0 auto;
+  max-width: 100%;
+  position: relative;
+  width: 470px;
+}
+@media (min-width: 768px) {
+  .photo-gallery__group {
+    margin: auto;
+  }
+}
+@media (min-width: 1024px) {
+  .photo-gallery__group {
+    display: unset;
+    flex-flow: unset;
+    height: 230px;
+    margin: 100px auto;
+  }
+}
+
+@media (min-width: 1024px) {
+  .photo-gallery__group img {
+    border-radius: var(--round-md);
+    height: 220px;
+    margin-bottom: unset;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 100%;
+    object-fit: cover;
+    position: absolute;
+    transition-delay: 200ms;
+    transition: margin 0.2s ease-in-out;
+    width: 250px;
+  }
+}
+
+.photo-gallery__photo {
+  border-radius: var(--round-md);
+  height: 220px;
+  margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 100%;
+  object-fit: cover;
+  width: 250px;
+}
+@media (min-width: 1024px) {
+  .photo-gallery__photo {
+    margin-bottom: unset;
+    position: absolute;
+    transition: margin 0.2s ease-in-out;
+    transition-delay: 200ms;
+  }
+  .photo-gallery__photo:hover {
+    margin-bottom: 100px;
+  }
+}
+.photo-gallery__photo img {
+  margin-bottom: 25px;
+}
+
+@media (min-width: 1024px) {
+  .photo-gallery__photo--1 {
+    rotate: -18deg;
+    transition: margin 0.2s ease-in-out;
+    z-index: 1;
+  }
+  .photo-gallery__photo--1:hover {
+    margin-top: -50px;
+    transition-delay: 500ms;
+  }
+  .photo-gallery__photo--2 {
+    bottom: 37px;
+    left: 38px;
+    rotate: -14deg;
+    z-index: 2;
+  }
+  .photo-gallery__photo--3 {
+    bottom: 46px;
+    left: 93px;
+    rotate: -7deg;
+    z-index: 3;
+  }
+  .photo-gallery__photo--4 {
+    bottom: 46px;
+    left: 134px;
+    rotate: 0deg;
+    z-index: 4;
+  }
+  .photo-gallery__photo--5 {
+    bottom: 20px;
+    left: 181px;
+    rotate: 10deg;
+    z-index: 5;
+  }
+  .photo-gallery__photo--6 {
+    bottom: -7px;
+    left: 234px;
+    rotate: 18deg;
+    z-index: 6;
+  }
+}
+.heading__photo-gallery {
+  margin-bottom: 30px;
+  text-align: center;
+  width: 100%;
+}
+@media (min-width: 1024px) {
+  .heading__photo-gallery {
+    position: absolute;
+    top: -130px;
+  }
+}
+
+/*
+Theme Name: Stone Creek
+Text Domain: Stone Creek
+Version: 1.0
+Description: Custom theme for dog breader website
+Tags: dogs
+Author: Dylan Ramsey
+Author URI: https://dylanbradramsey.com
+*/
+
+/*# sourceMappingURL=style.css.map */
