--- a/assets/sass/_testimonial-banner.scss
+++ b/assets/sass/_testimonial-banner.scss
@@ -1,80 +1,53 @@
 @use 'config' as *;
-.testimonial-banner {
-  background: $primary;
+.swiper {
+  width: 100%;
+}
+
+.testimonials-slider {
+  height: 625px;
+  margin-top: 30px;
   @media (min-width: $tablet) {
-    display: flex;
-    align-items: center;
+    height: 430px;
   }
-  @media (min-width: $desktop) {
-    height: 345px;
-  }
+}
 
-  .testimonial-banner__container {
-    margin: 0 auto;
-    height: 100%;
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    max-width: 100%;
-    width: $phoneContainer;
-    @media (min-width: $tablet) {
-      width: $tabletContainer;
-    }
-    @media (min-width: $desktop) {
-      flex-flow: row;
-      width: $deskTopContainer;
-    }
-    @media (min-width: $widescreen) {
-      width: $widescreenContainer;
-    }
-  }
+.testimonials-slider__image {
+  border-color: $primary;
+  border-radius: 100px;
+  border-style: solid;
+  border-width: 8px;
+  display: block;
+  height: 150px;
+  margin-bottom: 30px;
+  margin: 0 auto 20px;
+  width: 150px;
+}
 
-  .testimonial-banner__quote {
-    padding: 30px 0;
-    h5 {
-      font-weight: lighter;
-    }
-    @media (min-width: $tablet) {
-      padding: 30px 30px;
-    }
-    @media (min-width: $desktop) {
-      margin: 0 30px;
-    }
-    @media (min-width: $widescreen) {}
-  }
-  
-  .testimonial-banner__image {
-    width: 100%;
-    
-    @media (min-width: $tablet) {
-      width: 300px;
-    }
-    @media (min-width: $desktop) {
-      min-width: 330px;
-    }
-  }
+.testimonials-slider__copy {
+  font-weight: 500;
+  margin: auto auto 10px auto;
+  max-width: 700px;
+  width: 100%;
+}
 
-  .testimonial-banner__image--mobile {
-    width: 425px;
-    max-width: 100%;
-    margin: auto;
-    @media (min-width: $tablet) {
+.testimonials-slider__author {
+  color: black;
+  font-weight: 600;
+}
 
-    }
-    @media (min-width: $desktop) {
-      display: none;
-    }
-    @media (min-width: $widescreen) {}
-  }
+.swiper-slide {
+  font-size: 18px;
+  text-align: center;
+}
 
-  .testimonial-banner__image--desktop {
-    display: none;
-    @media (min-width: $tablet) {
+.swiper-pagination-bullet {
+  background: #727272;
+  height: 15px;
+  width: 15px;
+}
 
-    }
-    @media (min-width: $desktop) {
-      display: block;
-    }
-    @media (min-width: $widescreen) {}
-  }
+.swiper-pagination-bullet-active {
+  background: $primary;
+  height: 15px;
+  width: 15px;
 }
