--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -23,3 +23,5 @@ Author URI: https://dylanbradramsey.com
 @use 'previous-litters';
 @use 'photo-gallery';
 @use 'site-banner';
+@use 'questions-answers';
+@use 'full-width-list';
