--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -159,6 +159,12 @@ figure {
   }
 }
 
+.interior-page-heading {
+  margin-bottom: 30px;
+  margin-top: 30px;
+  text-align: center;
+}
+
 .item {
   background: steelblue;
   border: skyblue 1px solid;
@@ -534,6 +540,10 @@ figure {
 }
 .queen-boxes .queen-box .queen-box__image {
   margin-bottom: 30px;
+  height: 300px;
+  width: 300px;
+  max-height: 100%;
+  object-fit: cover;
 }
 
 .service-cards-group {
@@ -620,98 +630,181 @@ figure {
   text-align: center;
 }
 
-.testimonial-banner {
-  background: #C69C6C;
-}
-@media (min-width: 768px) {
-  .testimonial-banner {
-    display: flex;
-    align-items: center;
-  }
-}
-@media (min-width: 1024px) {
-  .testimonial-banner {
-    height: 345px;
-  }
-}
-.testimonial-banner .testimonial-banner__container {
-  margin: 0 auto;
-  height: 100%;
-  display: flex;
-  flex-flow: column;
-  align-items: center;
-  max-width: 100%;
-  width: 281px;
-}
-@media (min-width: 768px) {
-  .testimonial-banner .testimonial-banner__container {
-    width: 600px;
-  }
-}
-@media (min-width: 1024px) {
-  .testimonial-banner .testimonial-banner__container {
-    flex-flow: row;
-    width: 950px;
-  }
-}
-@media (min-width: 1440px) {
-  .testimonial-banner .testimonial-banner__container {
-    width: 1044px;
-  }
-}
-.testimonial-banner .testimonial-banner__quote {
-  padding: 30px 0;
-}
-.testimonial-banner .testimonial-banner__quote h5 {
-  font-weight: lighter;
-}
-@media (min-width: 768px) {
-  .testimonial-banner .testimonial-banner__quote {
-    padding: 30px 30px;
-  }
-}
-@media (min-width: 1024px) {
-  .testimonial-banner .testimonial-banner__quote {
-    margin: 0 30px;
-  }
-}
-.testimonial-banner .testimonial-banner__image {
+.swiper {
   width: 100%;
 }
+
+.testimonials-slider {
+  height: 625px;
+  margin-top: 30px;
+}
 @media (min-width: 768px) {
-  .testimonial-banner .testimonial-banner__image {
-    width: 300px;
+  .testimonials-slider {
+    height: 430px;
   }
 }
-@media (min-width: 1024px) {
-  .testimonial-banner .testimonial-banner__image {
-    min-width: 330px;
-  }
+
+.testimonials-slider__image {
+  border-color: #C69C6C;
+  border-radius: 100px;
+  border-style: solid;
+  border-width: 8px;
+  display: block;
+  height: 150px;
+  margin-bottom: 30px;
+  margin: 0 auto 20px;
+  width: 150px;
 }
-.testimonial-banner .testimonial-banner__image--mobile {
-  width: 425px;
-  max-width: 100%;
-  margin: auto;
+
+.testimonials-slider__copy {
+  font-weight: 500;
+  margin: auto auto 10px auto;
+  max-width: 700px;
+  width: 100%;
 }
-@media (min-width: 1024px) {
-  .testimonial-banner .testimonial-banner__image--mobile {
-    display: none;
-  }
+
+.testimonials-slider__author {
+  color: black;
+  font-weight: 600;
 }
-.testimonial-banner .testimonial-banner__image--desktop {
-  display: none;
+
+.swiper-slide {
+  font-size: 18px;
+  text-align: center;
 }
-@media (min-width: 1024px) {
-  .testimonial-banner .testimonial-banner__image--desktop {
-    display: block;
-  }
+
+.swiper-pagination-bullet {
+  background: #727272;
+  height: 15px;
+  width: 15px;
 }
+
+.swiper-pagination-bullet-active {
+  background: #C69C6C;
+  height: 15px;
+  width: 15px;
+}
+
 .contact-us {
   padding: 80px 0;
 }
 
 .contact-us__heading {
   text-align: center;
+}
+
+.contact-information {
+  grid-template-columns: 1fr;
+  gap: 80px;
+  margin-bottom: 40px;
+}
+@media (min-width: 1024px) {
+  .contact-information {
+    display: grid;
+  }
+}
+@media (min-width: 1440px) {
+  .contact-information {
+    margin-bottom: 150px;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+.contact-information h5 {
+  margin-bottom: 20px;
+}
+
+.contact-information__form {
+  background: #C69C6C;
+  border-radius: 8px;
+  max-width: 100%;
+  margin: auto;
+  padding-top: 15px;
+  padding-left: 5px;
+  padding-right: 5px;
+  margin-bottom: 40px;
+  width: 525px;
+  /* This isn't great practice and a bit hacky */
+}
+@media (min-width: 1440px) {
+  .contact-information__form {
+    margin: unset;
+    margin-left: auto;
+  }
+}
+@media (min-width: 1024px) {
+  .contact-information__form .form-group__form-field {
+    margin-left: auto;
+    width: 227px;
+  }
+}
+.contact-information__form .home-form {
+  margin-bottom: 0;
+}
+.contact-information__form .button--green {
+  background: var(--site-secondary-color-brown);
+  color: var(--site-secondary-color-green);
+}
+
+.contact-information__options {
+  margin: auto;
+  max-width: 100%;
+  width: 315px;
+}
+@media (min-width: 1440px) {
+  .contact-information__options {
+    margin-left: 0;
+    width: 600px;
+  }
+}
+.contact-information__options a {
+  color: black;
+  text-decoration: none;
+}
+.contact-information__options a:hover {
+  color: var(--site-secondary-color-brown);
+}
+
+.contact-information__options__contact {
+  align-items: flex-start;
+  display: flex;
+  gap: 15px;
+}
+.contact-information__options__contact img {
+  width: 20px;
+}
+@media (min-width: 768px) {
+  .contact-information__options__contact img {
+    width: 30px;
+  }
+}
+@media (min-width: 1024px) {
+  .contact-information__options__contact img {
+    width: unset;
+  }
+}
+.contact-information__options__contact p {
+  font-size: 1.2rem;
+  margin-bottom: 15px;
+}
+@media (min-width: 1024px) {
+  .contact-information__options__contact p {
+    font-size: 1.75rem;
+  }
+}
+
+.review-platforms {
+  display: flex;
+  gap: 30px;
+}
+.review-platforms img {
+  height: 138px;
+  width: 138px;
+}
+
+.contact-information__options__contact {
+  align-items: flex-start;
+  display: flex;
+  gap: 15px;
 }
 
 .footer {
@@ -801,7 +894,7 @@ figure {
 
 .site-form-field-whole {
   margin-bottom: 13px;
-  background: none;
+  background: white;
   width: 100%;
 }
 
@@ -829,6 +922,7 @@ figure {
 }
 .half-form-field-group input {
   width: 240px;
+  background: white;
   width: 100%;
   max-width: 100%;
 }
@@ -943,6 +1037,7 @@ figure {
     display: grid;
     grid-gap: 10px;
     grid-template-columns: repeat(auto-fill, 580px);
+    margin-top: 70px;
   }
 }
 
@@ -1083,6 +1178,142 @@ figure {
   position: absolute;
   width: 100%;
   z-index: 1;
+}
+
+.qs-and-as__categories-group {
+  display: flex;
+  flex-flow: column;
+  justify-content: space-between;
+  margin: 0 auto 30px;
+  max-width: 655px;
+  text-align: center;
+}
+@media (min-width: 1024px) {
+  .qs-and-as__categories-group {
+    flex-flow: row;
+  }
+}
+.qs-and-as__category {
+  text-transform: capitalize;
+}
+.qs-and-as__category a {
+  color: var(--site-main-color-brown);
+  text-decoration: none;
+}
+.qs-and-as__category a:hover {
+  color: var(--site-secondary-color-brown);
+}
+
+.qs-and-as__group {
+  margin-bottom: 40px;
+}
+
+.qs-and-as__heading {
+  color: var(--site-main-color-brown);
+  font-size: 2.375rem;
+  margin-bottom: 25px;
+  text-align: center;
+}
+
+.accordion {
+  border-radius: 8px;
+  box-shadow: 3px 3px 6px 0px #717171;
+  margin: 0 auto 30px;
+  max-width: 100%;
+  width: 770px;
+}
+
+.accordion__question {
+  align-items: center;
+  background-color: #C69C6C;
+  color: black;
+  cursor: pointer;
+  display: flex;
+  font-size: 1rem;
+  font-weight: 600;
+  height: 80px;
+  justify-content: center;
+  padding: 20px;
+}
+@media (min-width: 1024px) {
+  .accordion__question {
+    font-size: 1.375rem;
+    padding: unset;
+  }
+}
+
+.accordion__answer {
+  display: none;
+  padding: 22px 36px;
+}
+.accordion__answer p {
+  font-weight: 400;
+}
+
+.full-width-list {
+  margin-bottom: 50px;
+}
+.full-width-list .paw-print-list {
+  margin: auto;
+}
+
+.full-width-list__paw-print-list-container {
+  margin-left: 38px;
+}
+@media (min-width: 1440px) {
+  .full-width-list__paw-print-list-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    margin-left: unset;
+  }
+}
+
+.paw-print-list {
+  margin-left: 38px;
+  position: relative;
+}
+.paw-print-list li {
+  font-size: 2rem;
+  font-size: 1.2rem;
+  font-weight: 600;
+  margin-bottom: 10px;
+  max-width: 730px;
+  list-style: none;
+}
+@media (min-width: 1440px) {
+  .paw-print-list li {
+    font-size: 2rem;
+    max-width: 500px;
+  }
+}
+.paw-print-list li::before {
+  background-image: url(/wp-content/themes/stone-creek/assets/svgs/paw-print.svg);
+  background-size: contain;
+  background-repeat: no-repeat;
+  content: "";
+  display: inline-block;
+  height: 25px;
+  left: -35px;
+  position: absolute;
+  width: 30px;
+}
+@media (min-width: 768px) {
+  .paw-print-list li::before {
+    height: 26px;
+    width: 37px;
+  }
+}
+@media (min-width: 1024px) {
+  .paw-print-list li::before {
+    height: 37px;
+    left: -48px;
+    width: 42px;
+  }
+}
+@media (min-width: 1440px) {
+  .paw-print-list li::before {
+    left: -35px;
+  }
 }
 
 /*
