--- a/assets/sass/_forms.scss
+++ b/assets/sass/_forms.scss
@@ -12,7 +12,7 @@
 
 .site-form-field-whole {
   margin-bottom: 13px;
-  background: none;
+  background: white;
   width: 100%;
 }
 
@@ -37,6 +37,7 @@
   width: 100%;
   input {
     width: 240px;
+    background: white;
     width: 100%;
     max-width: 100%;
     @media (min-width: $desktop) {
