--- a/assets/sass/_global.scss
+++ b/assets/sass/_global.scss
@@ -43,7 +43,6 @@ h2 {
 
 h3 {
   font-size: 1.5rem;
-
   @media (min-width: $tablet) {}
   @media (min-width: $desktop) {
     font-size: 3rem;
@@ -117,6 +116,7 @@ figure {
     
   @media (min-width: $widescreen) {}
 }
+
 .container {
   margin: 0 auto ;
   max-width: 100%;
@@ -131,6 +131,12 @@ figure {
   @media (min-width: $widescreen) {
     width: $widescreenContainer;
   }
+}
+
+.interior-page-heading {
+  margin-bottom: 30px;
+  margin-top: 30px;
+  text-align: center;
 }
 
 .item {
