--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -11,6 +11,7 @@ Author URI: https://dylanbradramsey.com
 @use 'reset';
 @use 'global';
 @use 'navigation';
+@use 'mobile_navigation';
 @use 'hero-slider';
 @use 'full-width-content';
 @use 'content-with-image';
