--- a/assets/sass/_content-with-image.scss
+++ b/assets/sass/_content-with-image.scss
@@ -38,13 +38,29 @@
     flex-flow: column;
     justify-content: center;
     max-width: 450px;
+    h2 {
+      @media (min-width: $desktop) {
+        line-height: 1.2;
+      }
+    }
     @media (min-width: $tablet) {
       padding: 0 20px;
     }
     @media (min-width: $desktop) {
       padding: 0;
+      margin-top: 20px;
+      margin-right: 20px;
+      margin-bottom: 20px;
     }
     @media (min-width: $widescreen) {}
+  }
+
+  .content-with-image__image {
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
   }
 
   .content-with-image__image--mobile {
