--- a/assets/sass/_full-width-list.scss
+++ b/assets/sass/_full-width-list.scss
@@ -19,14 +19,15 @@
   margin-left: 38px;
   position: relative;
   li {
-    font-size: 2rem;
     font-size: 1.2rem;
     font-weight: 600;
     margin-bottom: 10px;
+    margin-left: 20px;
     max-width: 730px;
     list-style: none;
+    text-align: left;
     @media (min-width: $widescreen) {
-      font-size: 2rem;
+      font-size: 1.5rem;
       max-width: 500px;
     }
     &::before {
