--- a/assets/sass/_navigation.scss
+++ b/assets/sass/_navigation.scss
@@ -1,49 +1,11 @@
 @use 'config' as *;
 
-.mobile-navigation {
-  padding-bottom: 30px;
-
-  @media (min-width: $desktop) {
-    display: none;
-  }
-  .mobile-navigation__routes {
-    background: $primary;
-    font-size: 24px;
-    list-style: none;
-    padding: 4px 0;
-    display: none;
-    margin-bottom: 30px;
-    a {
-      color: black;
-      text-decoration: none;
-    }
-    li {
-      padding: 20px 0 15px 20px;
-      border-top: solid 2px black;
-    }
-    li:first-child {
-      border-top: none;
-    }
-  }
-
-  .icon {
-    display: flex;
-    justify-content: flex-end;
-    margin-bottom: 30px;
-  }
-
-  .mobile-navigation__site-logo {
-    margin: 30px auto 0;
-  }
-}
-
 .desktop-navigation {
   display: none;
   @media (min-width: $desktop) {
     display: flex;
     height: 200px;
     align-items: center;
-  
     .desktop-navigation__routes {
       list-style: none;
       display: flex;
@@ -56,99 +18,51 @@
         text-decoration: none;
       }
       li {
-        transition: margin 0.2s ease-in-out;
+        &:focus {
+          color: var(--site-main-color-brown);
+          //Part of nav animation
+          //margin-top: -3px;
+          .sub-menu {
+            display: block;
+          }          
+        }
+        &:hover {
+          color: var(--site-main-color-brown);
+          .sub-menu {
+            display: block; 
+          }
       }
-      li:hover {
-        margin-top: -3px;
-      }
-    }
-  
-    .desktop-navigation__site-logo {
-      min-width: 160px;
-      height: 85px;
     }
   }
 }
-.nav-icon4 {
-  width: 45px;
-  height: 3px;
-  position: relative;
-  margin: 30px 0 50px auto;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: 0.5s ease-in-out;
-  -moz-transition: 0.5s ease-in-out;
-  -o-transition: 0.5s ease-in-out;
-  transition: 0.5s ease-in-out;
-  cursor: pointer;
+
+.desktop-navigation__site-logo {
+  min-width: 160px;
+  width: 200px;
 }
 
- .nav-icon4 span {
-  display: block;
-  position: absolute;
-  height: 5px;
-  width: 100%;
-  background: black;
-  border-radius: 9px;
-  opacity: 1;
-  left: 0;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: 0.25s ease-in-out;
-  -moz-transition: 0.25s ease-in-out;
-  -o-transition: 0.25s ease-in-out;
-  transition: 0.25s ease-in-out;
-}
+.sub-menu {
+  background: none;
+  list-style-type: none;
+    @media (min-width: $desktop) {
+      display: none;
+      position: absolute;
+      border-radius: 5px;
+      z-index: 99999;
+      width: max-content;
+      background: $primary;
+      box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.2);
+      a {
+        color: black;
+        text-decoration: none;     
+        &:hover {
+          color: black !important; 
+        }
+      }
+    }
 
-/* Icon 4 */
-
-.nav-icon4 span:nth-child(1) {
-  top: 0px;
-  -webkit-transform-origin: left center;
-  -moz-transform-origin: left center;
-  -o-transform-origin: left center;
-  transform-origin: left center;
-}
-
-.nav-icon4 span:nth-child(2) {
-  top: 18px;
-  -webkit-transform-origin: left center;
-  -moz-transform-origin: left center;
-  -o-transform-origin: left center;
-  transform-origin: left center;
-}
-
-.nav-icon4 span:nth-child(3) {
-  top: 36px;
-  -webkit-transform-origin: left center;
-  -moz-transform-origin: left center;
-  -o-transform-origin: left center;
-  transform-origin: left center;
-}
-
-.nav-icon4.open span:nth-child(1) {
-  -webkit-transform: rotate(45deg);
-  -moz-transform: rotate(45deg);
-  -o-transform: rotate(45deg);
-  transform: rotate(45deg);
-  top: -2px;
-  left: 8px;
-}
-
-.nav-icon4.open span:nth-child(2) {
-  width: 0%;
-  opacity: 0;
-}
-
-.nav-icon4.open span:nth-child(3) {
-  -webkit-transform: rotate(-45deg);
-  -moz-transform: rotate(-45deg);
-  -o-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  top: 30px;
-  left: 8px;
+    li {
+      padding: 10px 13px;
+    }
+  }
 }
