--- a/assets/sass/_queens.scss
+++ b/assets/sass/_queens.scss
@@ -11,11 +11,21 @@
     @media (min-width: $desktop) {
       margin-left: 35px;
     }
+    a {
+      color: $primary;
+      text-decoration: underline;
+    }
   }
 
   .queen-content__body {
     color: black;
   }
+
+  .queen-content__heading {
+    @media (min-width: $desktop) {
+      line-height: 1;
+    }
+  }  
 
   .queen-image img {
     border-radius: 10px;
@@ -25,16 +35,18 @@
 
     @media (min-width: $desktop) {
       margin-bottom: 0;
-      min-width: 300px;
     }
   }
-  
+  .queen-image {
+    height: 300px;
+    width: 300px;
+    object-fit: cover;
+  }
 }
 
 .queens {
   color: $primary;
   padding: 30px 0;
-
   @media (min-width: $tablet) {}
   @media (min-width: $desktop) {
     padding: 100px 0;
